--- a/email_templates/disqualification.html
+++ b/email_templates/disqualification.html
@@ -11,7 +11,7 @@
     </tr>
     <tr>
         <td style="padding: 10px;">
-            I am sorry to report that your player has been disqualified from the competition.
+            I am sorry to report that your player has been disqualified from {TOURNAMENT.NAME}.
         </td>
     </tr>
     <tr>
